reports/PTP-113B.3.1A.5.1_IMPLEMENT_recovery_risk_20260706_174931.txt
  File "<stdin>", line 868
    new_select = '''<select name="recovery_mode" id="recovery_mode">
                            ^^^^
SyntaxError: invalid syntax
